stage-cluster/firstDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first-app
      tier: backend
  template:
    metadata:
      labels:
        app: first-app
        tier: backend
    spec:
      containers:
        - name: first-node
          image: vamckrish08/kubernetes:1
