stage-cluster/firstservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: first-app
  ports:
    - protocol: 'TCP'
      port: 80
      targetPort: 8080
  type: NodePort
